# archive-sum

./: .clang-format  .gitignore  .travis.yml  .version.sh  Cargo.toml  Makefile.am  README.md  archive-sum.c  configure.ac  meson.build  todo-check-archive
archive-sum/: Cargo.toml
archive-sum-cli/: Cargo.toml
archive-sum-cli/src/: cli.rs  main.rs
archive-sum-cli/tests/: print.rs  verify.rs
archive-sum-cli/tests/util/: mod.rs
archive-sum/src/: error.rs  lib.rs  print.rs  verify.rs
cli/: Cargo.toml
cli/src/: args.rs  cli.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs  print.rs  verify.rs
libarchive/: Cargo.toml
libarchive-sys/: Cargo.toml  build.rs
libarchive-sys/src/: lib.rs
libarchive/src/: archive.rs  entry.rs  error.rs  lib.rs
src/: Makefile.am  archive-sum.c  archive-sum.h  check.c  cli.rs  lib.rs  main.rs  meson.build  print.rs  sum.c  util.c  util.h  verify.rs
test/: Makefile.am  check-append.sh  check-missing.sh  check-quiet.sh  check-status.sh  check-with-dir.sh  corrupted-workflow.sh  cppcheck.sh  cppcheck.sh.in  large-file-support-check.sh  large-file-support-sum.sh  lfs-check.sh  lfs-sum.sh  memcheck-check.sh  memcheck-sum.sh  meson.build  setup-archive-sum-test.sh  setup-archive-sum-test.sh.in  shellcheck.sh  stdin-cli-dash-check.sh  stdin-cli-dash-sum.sh  stdin-cli-empty-check.sh  stdin-cli-empty-sum.sh  successful-workflow.sh
tests/: print.rs  verify.rs
tests/util/: mod.rs
