[package]
name = "archive-sum-cli"
version = "2.0.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "verify archive file integrity"
license = "GPL-3.0-or-later"
readme = "README.md"
documentation = "https://github.com/idiv-biodiversity/archive-sum"
homepage = "https://github.com/idiv-biodiversity/archive-sum"
repository = "https://github.com/idiv-biodiversity/archive-sum"
keywords = ["archive", "checksum", "integrity"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"

[dependencies]
anyhow = "1"
archive-sum = { path = "../archive-sum" }
atty = "0.2"
libarchive = { git = "https://github.com/idiv-biodiversity/libarchive-rs" }
openssl = "0.10"

[dependencies.clap]
version = "3"
features = ["cargo"]

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "2"

[[bin]]
name = "archive-sum"
path = "src/main.rs"
doc = false
