[package]
name = "archive-sum-cli"
version = "2.0.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "verify archive file integrity (CLI)"
license = "GPL-3.0-or-later"
readme = "../README.md"
documentation = "https://github.com/idiv-biodiversity/archive-sum"
homepage = "https://github.com/idiv-biodiversity/archive-sum"
repository = "https://github.com/idiv-biodiversity/archive-sum"
keywords = ["archive", "checksum", "integrity"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"

[[bin]]
name = "archive-sum"
path = "src/main.rs"
doc = false

[features]
default = ["md5", "sha1", "sha2"]
md5 = ["clap-digest/md5"]
sha1 = ["clap-digest/sha1"]
sha2 = ["clap-digest/sha2"]

[dependencies]
anyhow = "1"
archive-sum = { path = "../lib" }
atty = "0.2"
flate2 = "1"
tar = "0.4"

[dependencies.clap]
version = "3"
features = ["cargo"]

[dependencies.clap-digest]
version = "0.1"
default-features = false

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "2"
