[package]
name = "archive-sum"
version = "0.1.0"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "verify archive file integrity"
license = "GPL-3.0-or-later"
readme = "../README.md"
documentation = "https://github.com/idiv-biodiversity/archive-sum"
homepage = "https://github.com/idiv-biodiversity/archive-sum"
repository = "https://github.com/idiv-biodiversity/archive-sum"
keywords = ["archive", "checksum", "integrity"]
categories = ["command-line-utilities", "filesystem"]
edition = "2021"

[dependencies]
anyhow = "1"
archive-rs = "0.0.1"
digest = "0.10"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
md-5 = "0.10"
predicates = "3"
